fixed home page on mobile

--- a/Frontend/src/styles/Home.css
+++ b/Frontend/src/styles/Home.css
@@ -50,4 +50,8 @@
     .image-container {
         width: 80%;
     }
+
+    .icon {
+        width: 100px;
+    }
 }
